[gd_scene load_steps=3 format=3 uid="uid://b8qx5y2n3m1k4"]

[ext_resource type="Script" uid="uid://oq3gvism1icl" path="res://scripts/player/Player.gd" id="1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wr5hl"]
radius = 4.53809
height = 16.5907

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="CharacterLayers" type="Node2D" parent="."]
scale = Vector2(1.02, 1.02)

[node name="BaseSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="OutfitSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="CloakSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="FaceSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="HairSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="HatSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="ToolASprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="ToolBSprite" type="Sprite2D" parent="CharacterLayers"]
texture_filter = 1
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.13513)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wr5hl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1.39952)
zoom = Vector2(2, 2)
